[tool.poetry]
name = "probflow"
version = "0.1.0"
description = "A probabilistic programming library for Python"
authors = ["Sean <sean@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
scipy = "^1.11.0"
networkx = "^3.2.1"
matplotlib = "^3.8.0"
pymc = "^5.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
